servicemesh/09_ingress-tls/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: training
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: frontend.cloud-native.training
      hosts:
        - "frontend.cloud-native.training"
